@@ -1,3 +1,7 @@
+SVN
+* ask to save modified buffers before run rake
+* add "quick switch" support to models and unit tests
+
 0.5.3
 * create separate menubar entry "Snippets"
 * allow web server selection auto-save
